--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -11,6 +11,7 @@ jobs:
       - name: Get current date # get the date of the build
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
+        run: echo "${{ secrets.DOCKER_HUB_USERNAME }}    {{ secrets.DOCKER_HUB_ACCESS_TOKEN }} "
       -
         name: Login to Docker Hub
         uses: docker/login-action@v1
