--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -11,13 +11,11 @@ jobs:
       - name: Get current date # get the date of the build
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
-    steps:
       - uses: actions/checkout@v2 # first action : checkout source code
       - name: docker login
         run: docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v2
+      - name: Build and push
         with:
           context: ./
           file: ./Dockerfile
