--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - 'main'
+env:
+  DOCKER_USER: ${{secrets.DOCKERHUB_USERNAME}}
+  DOCKER_PASSWORD: ${{secrets.DOCKERHUB_TOKEN}}
 jobs:
   push-image-to-docker-hub:  # job name
     runs-on: ubuntu-latest  # runner name : (ubuntu latest version) 
@@ -11,8 +14,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: $DOCKER_USER
+          password: $DOCKER_PASSWORD
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -21,6 +24,6 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/flutter_env:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/flutter_env:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/flutter_env:buildcache,mode=max
+          tags: $DOCKER_USER/flutter_env:latest
+          cache-from: type=registry,ref=$DOCKER_USER/flutter_env:buildcache
+          cache-to: type=registry,ref=$DOCKER_USER/flutter_env:buildcache,mode=max
