--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -12,10 +12,8 @@ jobs:
     steps:
       -
         name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: $DOCKER_USER
-          password: $DOCKER_PASSWORD
+        uses: actions/checkout@v2
+        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD  
       -
         name: Build and push
         uses: docker/build-push-action@v2
