--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -5,7 +5,7 @@ on:
       - 'main'
 env:
   DOCKER_USER: ${{secrets.DOCKER_HUB_USERNAME}}
-  DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_TOKEN}}
+  DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
   REPO_NAME: 'flutter_env'
 jobs:
   push-image-to-docker-hub:  # job name
