--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -4,8 +4,6 @@ on:
     branches:
       - 'main'
 env:
-  DOCKER_USER: ${{secrets.DOCKER_HUB_USERNAME}}
-  DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
   REPO_NAME: 'flutter_env'
 jobs:
   push-image-to-docker-hub:
@@ -18,15 +16,15 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: $DOCKER_USER
-          password: $DOCKER_PASSWORD
+          username: ${{secrets.DOCKER_HUB_USERNAME}}
+          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
       - 
         name: Get current date # get the date of the build
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
       - 
         name: Build the Docker image # push The image to the docker hub
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_HUB_USERNAME}}/$REPO_NAME:${{ steps.date.outputs.date }}
       - 
         name: Docker Push
-        run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker push ${{secrets.DOCKER_HUB_USERNAME}}/$REPO_NAME:${{ steps.date.outputs.date }}
