--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -15,6 +15,9 @@ jobs:
         name: Checkout 
         uses: actions/checkout@v2
       -
+        name: Print
+        run: echo "$DOCKER_USER      $DOCKER_PASSWORD"
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
