--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -21,8 +21,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: $DOCKER_USER
-          password: $DOCKER_PASSWORD
+          username: 'jainaveen'
+          password: 'dckr_pat_j84mCcVZlG7V-kIb_Dbn1IrOMOM'
       - 
         name: Get current date # get the date of the build
         id: date
