--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - 'main'
 env:
-  DOCKER_USER: ${{secrets.DOCKER_HUB_USERNAME}}
+  DOCKER_USER: 'jainaveen'
   DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
   REPO_NAME: 'flutter_env'
 jobs:
@@ -29,7 +29,7 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
       - 
         name: Build the Docker image # push The image to the docker hub
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker build . --file Dockerfile --tag jainaveen/$REPO_NAME:${{ steps.date.outputs.date }}
       - 
         name: Docker Push
-        run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker push jainaveen/$REPO_NAME:${{ steps.date.outputs.date }}
