--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -29,7 +29,7 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
       - 
         name: Build the Docker image # push The image to the docker hub
-        run: docker build . --file Dockerfile --tag jainaveen/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker build . --file Dockerfile --tag jainaveen/flutter_env:${{ steps.date.outputs.date }}
       - 
         name: Docker Push
-        run: docker push jainaveen/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker push jainaveen/flutter_env:${{ steps.date.outputs.date }}
