--- a/DockerFile
+++ b/DockerFile
@@ -7,7 +7,7 @@ RUN yum -y install git &&\
     yum -y install curl &&\
     yum -y install unzip 
 RUN curl -sL https://rpm.nodesource.com/setup_10.x | bash - &&\
-    yum install nodejs
+    yum -y install nodejs
 RUN git clone https://github.com/flutter/flutter.git -b 2.10.5
 ENV PATH="/flutter/bin:$PATH"
 RUN flutter precache
