--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -26,7 +26,10 @@ jobs:
       - 
         name: Get current date # get the date of the build
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
+        run: |
+          echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
+          pwd
+          ls
       - 
         name: Build the Docker image # push The image to the docker hub
         run: docker build -t jainaveen/flutter_env:${{ steps.date.outputs.date }} .
